// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with selected and query 1`] = `
Array [
  <div
    class="searchField"
  >
    <button
      class="indexButton"
      type="button"
    >
      <span
        class="index"
      >
        Page
      </span>
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
    <div
      class="inputContainer"
    >
      <input
        autofocus=""
        class="input"
        value="Test"
      />
      <span
        aria-label="su-times"
        class="su-times clickable clearIcon"
        role="button"
        tabindex="0"
      />
      <span
        aria-label="su-search"
        class="su-search clickable searchIcon"
        role="button"
        tabindex="0"
      />
    </div>
  </div>,
  <p
    class="hint"
  >
    sulu_search.search_hint
  </p>,
]
`;

exports[`Render without selected index 1`] = `
Array [
  <div
    class="searchField"
  >
    <button
      class="indexButton"
      type="button"
    >
      <span
        class="index"
      >
        sulu_search.everything
      </span>
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </button>
    <div
      class="inputContainer"
    >
      <input
        autofocus=""
        class="input"
        value=""
      />
      <span
        aria-label="su-search"
        class="su-search clickable searchIcon"
        role="button"
        tabindex="0"
      />
    </div>
  </div>,
  <p
    class="hint"
  >
    sulu_search.search_hint
  </p>,
]
`;
